<resources>
    <string name="app_name">Seguros</string>
    <string name="title_activity_lista_usuarios">Crear seguro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="cedula">Cedula</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="agregar">Agregar</string>

    <string name="usuarios">Crear usuario</string>
    <string name="poliza">Crear poliza</string>
    <string name="sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="guardado">Guardado exitosamente</string>
    <string name="numero_poliza">Numero de la poliza</string>
    <string name="numero_placa">Numero de placa</string>
    <string name="fechai">Fecha inicio</string>
    <string name="fechaf">Fecha final</string>
    <string name="nombreAsesor">Nombre del asesor</string>

    <string-array name="op_lista_principal">
        <item>@string/usuarios</item>
        <item>@string/lista_usuario</item>
        <item>@string/consultar</item>
        <item>@string/consultar_poliza</item>

    </string-array>
    <string-array name="lista_sexo">
        <item>@string/hombre</item>
        <item>@string/mujer</item>
    </string-array>
    <string name="title_activity_lista_persona">ListaPersona</string>
    <string name="id_persona">ID_persona</string>
    <string name="nombre_poliza">Nombre persona: </string>
    <string name="lista_usuario">Crear poliza por lista de usuarios</string>
    <string name="title_activity_consultar_polizas">Consultar polizas por los usuarios</string>
    <string name="consultar">Consultar Polizas por usuarios</string>
    <string name="title_activity_consultar_poliza_persona">ConsultarPolizaPersona</string>
    <string name="title_activity_consultar_poliza_xpersona">ConsultarPolizaXPersona</string>
    <string name="consultar_poliza">Ver todas las polizas creadas</string>
    <string name="title_activity_lista_poliza">Lista de las polizas</string>
    <string name="title_activity_lista_poliza_xpersona">Polizas de este usuario</string>
    <string name="tituloCrearPersona">CREAR USUARIOS.</string>
    <string name="error">No pueden quedar campos vacios</string>
    <string name="tituloMostrarListaUsuarios">Crear seguro</string>
    <string name="cedula_poliza">Cedula persona:</string>
    <string name="fecha">></string>
    <string name="valor">Costo de la poliza</string>
    <string name="nombreCm">Nombre completo</string>
    <string name="valordePoliza">Valor neto de sus polizas</string>
    <string name="moto">Moto</string>
    <string name="carro">Carro</string>
    <string name="error2">Error de tipo de poliza</string>
    <string name="tipo">Tipo de poliza</string>
    <string name="fechalimi">Fechas estipulada de la poliza</string>
    <string name="informacion">Imformacion de la poliza</string>
    <string name="informaciondepoliza">Aca podras eliminar la poliza .</string>
    <string name="eliminar">Eliminar poliza</string>
    <string name="pregunta_eliminacion">Desea eliminar los datos de esta poliza?</string>
    <string name="positivo">SI</string>
    <string name="negativo">NO</string>
    <string name="modificar">Modificar</string>
    <string name="pregunta_modificar">Quiere modicar?</string>
    <string name="title_activity_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">principal</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_calculo">Calculos</string>
    <string name="tab_home">Home</string>
    <string name="tab_seguro">Seguros</string>
    <string name="title_activity_seguros">Seguros</string>
    <string name="irSeguro">Ir a la nomina de los seguros</string>
    <string name="irSeguros">Ir a los seguros</string>
    <string name="Desc">Una agencia de seguros es una empresa vinculada por un contrato de agencia a una entidad aseguradora, encargada de captar nuevos asegurados para que suscriban los seguros de la compañía (tomadores de seguros) y/o dar asesoramiento a su cartera de clientes.</string>
    <string name="home">Este es el Home</string>
    <string name="simulacion">Simulación Pólizas</string>
    <string name="combustible">Tipo de Combustible</string>
    <string name="pago">Tipo de Pago</string>
    <string name="boton">Consultar</string>
    <string name="combustible_acpm">Acpm</string>
    <string name="combustible_gasolina">Gasolina</string>
    <string name="pago_credito">Crédito</string>
    <string name="pago_efectivo">Efectivo</string>
    <string name="usd">USD</string>
    <string name="col">COL</string>
    <string name="opalta">Gama Baja</string>
    <string name="opmedia">Gama Media</string>
    <string name="opbaja">Gama Alta</string>
    <string name="cantidad">Cantidad</string>
    <string name="gama">Tipo de Gama</string>
    <string-array name="tipo_array">
        <item>@string/opbaja</item>
        <item>@string/opmedia</item>
        <item>@string/opalta</item>
    </string-array>
    <string name="error_vacio">Digite un Número</string>
    <string name="error_mayorcero">Digite NÚmero mayor a cero</string>
    <string name="inicio">Seguros LTDA.</string>
    <string name="welcome">Bienvenido.</string>
</resources>
