<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.josechavez.proyectoseguros.CrearPersona"

    >

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/numero_poliza" />

<EditText
    android:id="@+id/txtPoliza"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    />

<TextView
    android:id="@+id/numero_placa"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/numero_placa" />

<EditText
    android:id="@+id/txtPlaca"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    />

<TextView
    android:id="@+id/textView3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/fechai" />

<EditText
    android:id="@+id/txtFecha"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    />

<TextView
    android:id="@+id/textView4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/fechaf" />

<EditText
    android:id="@+id/txtFechaF"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    />

<TextView
    android:id="@+id/textView5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/nombreAsesor" />

<EditText
    android:id="@+id/txtAsesor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    />

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sexo" />

<Spinner
    android:id="@+id/sp_sexo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />

<Button
    android:id="@+id/btnGuardar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="guardar"
    android:text="@string/agregar" />
</LinearLayout>

