<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardElevation="30dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="104dp"
        app:cardCornerRadius="30dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgFoto"
                android:layout_width="104dp"
                android:layout_height="match_parent"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/cedula"
                        android:textAlignment="textStart"
                        android:textColor="@color/editTextColorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/lblCedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nombre"
                        android:textAlignment="textStart"
                        android:textColor="@color/editTextColorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/lblNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/apellido"
                        android:textAlignment="textStart"
                        android:textColor="@color/editTextColorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/lblApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>




            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>