<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="13dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:text="@string/numero_poliza"
                            android:textAlignment="textStart"
                            android:textColor="@color/editTextColorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtPoliza"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textAlignment="textStart"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="InvalidId" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_placa"
                            android:textAlignment="textStart"
                            android:textColor="@color/editTextColorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:id="@+id/txtPlaca"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textAlignment="textStart"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/editTextColorBlack"
                    android:orientation="horizontal"
                    android:layout_marginRight="12dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/valor"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/txtValor"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginRight="15dp"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechalimi"
                    android:textAlignment="textStart"
                    android:textColor="@color/editTextColorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="10dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/txtFechai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="textStart"
                        android:textSize="16sp"
                        android:textColor="@color/editTextColorBlack"
                        />


                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/txtFechaf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="textStart"
                        android:textColor="@color/editTextColorBlack"
                        android:textSize="16sp"

                         />

                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>